--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ body {
 .header-line {
   position: relative;
   color: var(--text-hover-link-blue);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-line::after {
   content: "     ";
@@ -132,7 +133,6 @@ body {
   border-radius: 2px;
   width: 48px;
   height: 4px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hnl:hover,
@@ -179,8 +179,8 @@ body {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/offise.jpg);
-  max-width: 1440px;
+    url(../images/office.jpg);
+  min-width: 1440px;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -227,6 +227,15 @@ body {
 /* Features section */
 .features {
   padding: 120px 0;
+}
+.features-icons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 112px;
+  background-color: var(--bg-ligt-grey-color);
+  border-radius: 4px;
+  margin-bottom: 8px;
 }
 
 .features-titles {
@@ -295,11 +304,35 @@ body {
   background-color: var(--bg-color);
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .div-item {
-  padding: 32px 16px;
+  padding: 32px 0;
 }
-
+.social-networks {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.social-network {
+  width: 40px;
+  height: 40px;
+}
+.social-icons {
+  width: 100%;
+  height: 100%;
+  background-color: var(--bg-btn-hero);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.social-icons:hover,
+.social-icons:focus {
+  background-color: var(--bg-btn-hover-filtres);
+}
 .team-subtitle {
   font-weight: 500;
   font-size: 20px;
