--- a/css/styles.css
+++ b/css/styles.css
@@ -101,6 +101,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 72px;
 }
 
 .header-nav {
@@ -367,9 +368,9 @@ body {
 .customers-title {
   font-size: 36px;
   line-height: 1.11;
-  counter-reset: var(--bg-dark-color);
   margin-bottom: 72px;
   text-align: center;
+  color: var(--bg-dark-color);
 }
 .customers-container {
   display: flex;
@@ -388,8 +389,14 @@ body {
   align-items: center;
   justify-content: center;
   color: var(--border-customers-color);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.customers-icn:hover,
+.customers-icn:hover {
+  color: var(--bg-btn-hover);
+  border-color: var(--bg-btn-hover);
+}
+
 .customers-icn:focus {
   color: var(--bg-btn-hover);
   border-color: var(--bg-btn-hover);
@@ -417,7 +424,7 @@ body {
   max-width: 264px;
 }
 .footer-logo {
-  margin-right: 120px;
+  padding-right: 120px;
 }
 .footer-title {
   font-weight: 500;
@@ -458,6 +465,20 @@ body {
   gap: 24px;
   margin-bottom: 72px;
 }
+.underline {
+  color: var(--bg-btn-hover);
+  position: relative;
+}
+.underline::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  width: 66px;
+  background-color: var(--bg-btn-hover-filtres);
+  border-radius: 2px;
+}
 
 .portfolio-title {
   letter-spacing: 0.02em;
@@ -475,6 +496,10 @@ body {
   padding: 12px 24px;
   border: 1px solid var(--border-color-filtres-btn);
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-button:hover,
@@ -482,6 +507,8 @@ body {
   color: var(--text-button-white-color);
   background-color: var(--bg-btn-hover-filtres);
   border: 1px solid transparent;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .portfolio-prject-list {
   display: flex;
@@ -498,10 +525,36 @@ body {
 ul {
   padding-left: 0;
 }
+.pop-up-window {
+  position: relative;
+  overflow: hidden;
+}
+.hidden-text {
+  position: absolute;
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--bg-btn-filtres);
+  padding: 40px 32px;
+  background-color: var(--bg-btn-hero);
+  height: 100%;
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .portfolio-div {
   padding: 32px 16px;
   border: 1px solid var(--border-color-filtres-btn);
   border-top: none;
+}
+.addition {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.addition:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-subtitle {
@@ -516,4 +569,7 @@ ul {
 .portfolio-text {
   font-weight: 400;
   color: var(--text-main-color);
+}
+.portfolio-text:hover {
+  transform: translateY(0%);
 }
