--- a/css/styles.css
+++ b/css/styles.css
@@ -592,12 +592,12 @@ ul {
   pointer-events: none;
 }
 .modal {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   width: 408px;
-  height: 584px;
+  min-height: 584px;
   background-color: var(--bg-modal-color);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -618,7 +618,8 @@ ul {
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  border-radius: 50px;
+  border-radius: 50%;
+  position: absolute;
 }
 .close-button:hover,
 .close-button:focus {
@@ -628,7 +629,7 @@ ul {
 .icon-close {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.icon-close:hover,
-.icon-close:focus {
+.close-button:hover,
+.close-button:focus .icon-close {
   fill: var(--bg-color);
 }
