--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ body {
 .hnl {
   padding: 24px 0 24px;
   position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-line {
   position: relative;
@@ -592,7 +593,7 @@ ul {
   pointer-events: none;
 }
 .modal {
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
