--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin: 0;
   color: var(--text-main-color);
   background-color: var(--bg-color);
 }
@@ -528,6 +529,9 @@ body {
 }
 ul {
   padding-left: 0;
+}
+h1 h2 h3 h4 h5 {
+  margin: 0;
 }
 .pop-up-window {
   position: relative;
