--- a/css/styles.css
+++ b/css/styles.css
@@ -424,6 +424,7 @@ body {
   margin-bottom: 16px;
 }
 .footer-text {
+  margin: 0;
   font-weight: 400;
   color: var(--text-footer-color);
   max-width: 264px;
@@ -567,6 +568,10 @@ h5 {
 .addition:hover {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.addition:hover .hidden-text,
+.addition:focus .hidden-text {
+  transform: translateY(0%);
 }
 
 .portfolio-subtitle {
