--- a/css/styles.css
+++ b/css/styles.css
@@ -522,6 +522,7 @@ body {
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+  margin: 0;
 
   margin-bottom: 72px;
 }
@@ -556,6 +557,7 @@ h5 {
   width: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin: 0;
 }
 
 .portfolio-div {
