--- a/css/styles.css
+++ b/css/styles.css
@@ -372,8 +372,11 @@ body {
   font-size: 36px;
   line-height: 1.11;
   margin-bottom: 72px;
+  font-weight: 700;
+  line-height: 40px;
   text-align: center;
   color: var(--bg-dark-color);
+  text-transform: capitalize;
 }
 .customers-container {
   display: flex;
@@ -419,10 +422,7 @@ body {
   display: flex;
   align-items: baseline;
 }
-.ftr {
-  display: inline-block;
-  margin-bottom: 16px;
-}
+
 .footer-text {
   font-weight: 400;
   color: var(--text-footer-color);
