--- a/css/styles.css
+++ b/css/styles.css
@@ -543,18 +543,19 @@ h5 {
 }
 .hidden-text {
   position: absolute;
-  top: 0;
+  color: var(--bg-btn-filtres);
+  margin: 0;
+  padding: 40px 32px;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--bg-btn-filtres);
-  padding: 40px 32px;
   background-color: var(--bg-btn-hero);
-  height: 100%;
+  top: 0;
+  left: 0;
   width: 100%;
+  height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  margin: 0;
 }
 
 .portfolio-div {
